fix: make search functionality more reliable on mobile devices

--- a/static/css/output.css
+++ b/static/css/output.css
@@ -1144,6 +1144,10 @@ input:checked + .toggle-bg {
   z-index: 50;
 }
 
+.col-span-full {
+  grid-column: 1 / -1;
+}
+
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
